; ModuleID = '/home/carl/AnghaBench/mpv/video/out/opengl/extr_context_drm_egl.c_framebuffer_destroy_callback.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/opengl/extr_context_drm_egl.c_framebuffer_destroy_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gbm_bo = type { i32 }
%struct.framebuffer = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gbm_bo*, i8*)* @framebuffer_destroy_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @framebuffer_destroy_callback(%struct.gbm_bo* %0, i8* %1) #0 {
  %3 = alloca %struct.gbm_bo*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.framebuffer*, align 8
  store %struct.gbm_bo* %0, %struct.gbm_bo** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.framebuffer*
  store %struct.framebuffer* %7, %struct.framebuffer** %5, align 8
  %8 = load %struct.framebuffer*, %struct.framebuffer** %5, align 8
  %9 = icmp ne %struct.framebuffer* %8, null
  br i1 %9, label %10, label %18

10:                                               ; preds = %2
  %11 = load %struct.framebuffer*, %struct.framebuffer** %5, align 8
  %12 = getelementptr inbounds %struct.framebuffer, %struct.framebuffer* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.framebuffer*, %struct.framebuffer** %5, align 8
  %15 = getelementptr inbounds %struct.framebuffer, %struct.framebuffer* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @drmModeRmFB(i32 %13, i32 %16)
  br label %18

18:                                               ; preds = %10, %2
  ret void
}

declare dso_local i32 @drmModeRmFB(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
